--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.4",
+    "react-toastify": "^9.1.1",
     "rsuite": "^5.23.3",
     "wagmi": "^0.9.6",
     "web-vitals": "^2.1.4"
